[package]
name = "reborn_prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minhook = "0.3.0"
serde_json = "1.0.108"
toy-arms = {git = "https://github.com/pseuxide/toy-arms"}
wchar = "0.11.0"

[dependencies.serde]
version = "1.0.192"
features = ["serde_derive"]

[lib]
crate-type = ["cdylib"]
